# genai-repo-auditor

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  MANIFEST.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.codex/: config.exec.toml.example  config.goal.toml.example
.codex/rules/: default.rules.example
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/requirements/: publish-build.in  publish-build.txt
.github/workflows/: codeql.yml  install-matrix.yml  lint.yml  publish-pypi.yml  release.yml  self-validation.yml
benchmarks/corpus/: case.schema.json  core.json  corpus.schema.json
docs/: ADVANCED_WORKFLOW_DECISION_TABLE.md  ADVERSARIAL_FIXTURES.md  ADVERSARIAL_VALIDATION.md  AGENT_SURFACE_DISCOVERY.md  AGENT_WORKERS.md  ARCHITECTURE.md  ATTACK_CHAINS.md  BENCHMARKING.md  CODEX_WORK_INSTRUCTIONS.md  COMMAND_REFERENCE.md  CUSTOMER_AUDIT_RUNBOOK.md  DEPENDENCY_INGESTION.md  DISCLOSURE_AND_PUBLICATION_POLICY.md  DOGFOOD_CAMPAIGN.md  DOGFOOD_REPORTING.md  DOGFOOD_RUNBOOK.md  EFFICACY_BENCHMARK.md  EFFICACY_BENCHMARK_CORPUS.md  EFFICACY_CLAIMS_AND_PUBLICATION.md  EVIDENCE_GRAPH.md  EXTERNAL_FINDING_IMPORT.md  GITHUB_BOOTSTRAP.md  GOAL_DEEP_DIVE.md  GOAL_DEEP_DIVE_WORKFLOW.md  GOAL_PROMPT_LIBRARY.md  ISSUE_WORKFLOW.md  LOCAL_ARTIFACT_CLEANUP.md  LOCAL_INSTALL_AND_AUDIT.md  MAINTAINER_EXTENSION_POINTS.md  METRICS.md  MULTI_REPO.md  NORMAL_OPERATION.md  NORMAL_WORKFLOW.md  NOVELTY_LEDGER.md  OPERATING_MODEL.md  PRIVATE_HOLDOUT_PROTOCOL.md  PROVENANCE_POSTURE.md  PYPI_DISTRIBUTION.md  RELEASE_PROCESS.md  REMEDIATION_CANDIDATES.md  (+18 more)
docs/dogfood/: BLOG_OUTLINE_AI_APPSEC_HARNESS.md  DEMO_SCRIPT.md  INTERNAL_EFFECTIVENESS_REPORT_TEMPLATE.md  ITDO_ERP4_INTERNAL_SUMMARY_TEMPLATE.md  ITDO_ERP4_REPORTING_BOUNDARIES.md  ITDO_ERP4_SCANNER_EVIDENCE_SUMMARY.md  ITDO_ERP4_SCOPE.md  ITDO_ERP4_SECOND_DOGFOOD_SUMMARY.md  ITDO_ERP4_TARGET_SELECTION.md  PUBLIC_ITDO_ERP4_CASE_STUDY.md  PUBLIC_LAUNCH_CHECKLIST.md  PUBLIC_SELF_DOGFOOD_CASE_STUDY.md  README_POSITIONING_NOTES.md  SELF_DOGFOOD_BACKLOG.md  SELF_DOGFOOD_SUMMARY.md
docs/evaluation/: CLAIM_EVIDENCE_MATRIX.md  EVALUATION_REPRODUCTION.md  PUBLIC_EFFICACY_AND_OPERATIONS_REPORT.md
docs/ja/: ADVANCED_POSTURE_WORKFLOWS.ja.md  CODEX_WORK_INSTRUCTIONS.ja.md  EFFICACY_BENCHMARK.ja.md  EFFICACY_CLAIMS_AND_PUBLICATION.ja.md  ISSUE_WORKFLOW.ja.md  LOCAL_INSTALL_AND_AUDIT.ja.md  PRIVATE_HOLDOUT_PROTOCOL.ja.md  PYPI_DISTRIBUTION.ja.md  README.md  SCANNER_INTEGRATION.ja.md  SECURITY_MODEL.ja.md  USAGE.ja.md  WINDOWS_WSL_SUPPORT.ja.md
docs/public/: ARTICLE_CLAIM_SOURCES.md  DEMO_PUBLICATION_REVIEW.md  DEMO_SHOT_LIST.md  RECORDED_DEMO_RUNBOOK.md  TECHNICAL_ARTICLE_DRAFT.md
docs/releases/: V0_5_0_PUBLICATION_HANDOFF.md
examples/: repos.txt.example  staged-agentic-workflow.sh.example
lib/: agent_surface.py  agent_worker.py  benchmark.py  dependency_posture.py  duplicate_decisions.py  efficacy_benchmark.py  efficacy_comparison.py  efficacy_corpus.py  efficacy_holdout.py  efficacy_worker.py  evidence_graph.py  external_findings.py  gralib.py  issue_dry_run_summary.py  issue_ledger.py  metrics.py  no_findings.py  novelty_ledger.py  patch_validation.py  platform_support.py  posture_artifacts.py  provenance_posture.py  provider_failures.py  render_template.py  report_freshness.py  report_safety.py  run_events.py  run_manifest.py  run_state.py  sandbox_profiles.py  scanner_adapters.py  scanner_ingest.py  scanner_normalize.py  scanner_readiness.py  scanner_reporting.py  scanner_runner.py  scorecard_posture.py  target_artifact.py  target_coverage.py  target_coverage_guardrails.py  (+8 more)
lib/publication/: __init__.py  github.py  ledger.py  plan_store.py  planning.py  policy.py  rendering.py
lib/validators/: __init__.py  advanced.py  common.py  context.py  findings.py  registry.py  run_manifest.py  scanner.py  targets.py
prompts/: AGENTS.audit.md
prompts/codex/: bootstrap-import.goal.md  first-quality-pass.goal.md
prompts/exec/: adversarial-validate.prompt.md  full-audit.prompt.md  gapfill-target.prompt.md  generate-targets.prompt.md  recon.prompt.md  remediate.prompt.md  research-target.prompt.md  safe-proof.prompt.md  scanner-triage.prompt.md  synthesize-chains.prompt.md  trace-reachability.prompt.md  validate-findings.prompt.md  variant-analysis.prompt.md
prompts/goal/: adversarial-validate.goal.md  deep-dive-category.goal.md  deep-dive-finding.goal.md  full-audit.goal.md  gapfill-target.goal.md  remediate.goal.md  research-target.goal.md  safe-proof.goal.md  synthesize-chains.goal.md  trace-reachability.goal.md  validate-findings.goal.md  variant-analysis.goal.md
prompts/issue/: issue-policy.md
scripts/: build_release.py  clean-local-artifacts.py  validate-install-smoke.sh  validate-shellcheck.sh  validate_python_distribution.py  validate_release_controls.py
src/genai_repo_auditor/: __init__.py  audit_cli.py  batch_cli.py  cli.py  resources.py  version.py
templates/: taxonomy-aliases.json
tests/: test_agent_surface.py  test_agent_worker.py  test_cli_help.py  test_console_scripts.py  test_dependency_ingestion.py  test_docs_consistency.py  test_doctor.py  test_dogfood_templates.py  test_efficacy_benchmark.py  test_efficacy_comparison.py  test_efficacy_corpus.py  test_efficacy_holdout.py  test_evaluation_docs.py  test_gralib_codex_exec.py  test_gralib_paths.py  test_issue_dry_run_summary.py  test_local_artifact_cleanup.py  test_manifest.py  test_novelty_ledger.py  test_package_resources.py  test_patch_validation.py  test_platform_support.py  test_provenance_posture.py  test_provider_failures.py  test_publication_modules.py  test_publication_package.py  test_publication_state.py  test_pypi_distribution.py  test_release_controls.py  test_release_metadata.py  test_report_contracts.py  test_report_freshness.py  test_report_safety.py  test_run_events.py  test_run_state.py  test_sandbox_profiles.py  test_scanner_adapters.py  test_scanner_ingest.py  test_scanner_normalize.py  test_scanner_readiness.py  (+12 more)
(+172 files in other folders)
