[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-repo-auditor"
dynamic = ["version"]
description = "Local-first defensive repository security auditing toolkit"
readme = "README.md"
requires-python = ">=3.10"
# SPDX license expression per PEP 639; setuptools>=77 validates this as a string.
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "itdojp" }]
keywords = ["security", "audit", "appsec", "repository", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/itdojp/genai-repo-auditor"
Repository = "https://github.com/itdojp/genai-repo-auditor"
Issues = "https://github.com/itdojp/genai-repo-auditor/issues"

[project.scripts]
gra-adversarial-validate = "genai_repo_auditor.cli:gra_adversarial_validate"
gra-agent-check = "genai_repo_auditor.cli:gra_agent_check"
gra-audit = "genai_repo_auditor.cli:gra_audit"
gra-batch = "genai_repo_auditor.cli:gra_batch"
gra-benchmark = "genai_repo_auditor.cli:gra_benchmark"
gra-chains = "genai_repo_auditor.cli:gra_chains"
gra-dashboard = "genai_repo_auditor.cli:gra_dashboard"
gra-doctor = "genai_repo_auditor.cli:gra_doctor"
gra-evidence-graph = "genai_repo_auditor.cli:gra_evidence_graph"
gra-gapfill = "genai_repo_auditor.cli:gra_gapfill"
gra-import-findings = "genai_repo_auditor.cli:gra_import_findings"
gra-index = "genai_repo_auditor.cli:gra_index"
gra-ingest = "genai_repo_auditor.cli:gra_ingest"
gra-issues = "genai_repo_auditor.cli:gra_issues"
gra-metrics = "genai_repo_auditor.cli:gra_metrics"
gra-no-findings = "genai_repo_auditor.cli:gra_no_findings"
gra-novelty = "genai_repo_auditor.cli:gra_novelty"
gra-proofs = "genai_repo_auditor.cli:gra_proofs"
gra-recon = "genai_repo_auditor.cli:gra_recon"
gra-remediate = "genai_repo_auditor.cli:gra_remediate"
gra-research = "genai_repo_auditor.cli:gra_research"
gra-run-state = "genai_repo_auditor.cli:gra_run_state"
gra-sandbox-check = "genai_repo_auditor.cli:gra_sandbox_check"
gra-sarif = "genai_repo_auditor.cli:gra_sarif"
gra-scanner-triage = "genai_repo_auditor.cli:gra_scanner_triage"
gra-store = "genai_repo_auditor.cli:gra_store"
gra-targets = "genai_repo_auditor.cli:gra_targets"
gra-taxonomy-preflight = "genai_repo_auditor.cli:gra_taxonomy_preflight"
gra-trace = "genai_repo_auditor.cli:gra_trace"
gra-validate-report = "genai_repo_auditor.cli:gra_validate_report"
gra-variant = "genai_repo_auditor.cli:gra_variant"
gra-workflow-profile = "genai_repo_auditor.cli:gra_workflow_profile"
gra-worktree-check = "genai_repo_auditor.cli:gra_worktree_check"


[tool.setuptools]
package-dir = { "" = "src" }
packages = ["genai_repo_auditor"]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.data-files]
"share/genai-repo-auditor" = ["VERSION"]
"share/genai-repo-auditor/bin" = ["bin/gra-*"]
"share/genai-repo-auditor/lib" = ["lib/*.py"]
"share/genai-repo-auditor/lib/publication" = ["lib/publication/*.py"]
"share/genai-repo-auditor/lib/validators" = ["lib/validators/*.py"]
"share/genai-repo-auditor/prompts" = ["prompts/*.md"]
"share/genai-repo-auditor/prompts/codex" = ["prompts/codex/*.md"]
"share/genai-repo-auditor/prompts/exec" = ["prompts/exec/*.md"]
"share/genai-repo-auditor/prompts/goal" = ["prompts/goal/*.md"]
"share/genai-repo-auditor/prompts/issue" = ["prompts/issue/*.md"]
"share/genai-repo-auditor/templates" = ["templates/taxonomy-aliases.json"]
"share/genai-repo-auditor/templates/agent-workers" = ["templates/agent-workers/*"]
"share/genai-repo-auditor/templates/dogfood" = ["templates/dogfood/*"]
"share/genai-repo-auditor/templates/reports" = ["templates/reports/*"]
"share/genai-repo-auditor/templates/taxonomies" = ["templates/taxonomies/*.json"]
