[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-repo-auditor"
dynamic = ["version"]
description = "Local-first defensive repository security auditing toolkit"
readme = "README.md"
requires-python = ">=3.10,<3.13"
# SPDX license expression per PEP 639; setuptools>=77 validates this as a string.
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "itdojp" }]
keywords = ["security", "audit", "appsec", "repository", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/itdojp/genai-repo-auditor"
Repository = "https://github.com/itdojp/genai-repo-auditor"
Issues = "https://github.com/itdojp/genai-repo-auditor/issues"
Documentation = "https://github.com/itdojp/genai-repo-auditor/blob/main/docs/USAGE.md"
Changelog = "https://github.com/itdojp/genai-repo-auditor/blob/main/CHANGELOG.md"

[project.scripts]
gra-adversarial-validate = "genai_repo_auditor.cli:gra_adversarial_validate"
gra-agent-check = "genai_repo_auditor.cli:gra_agent_check"
gra-audit = "genai_repo_auditor.cli:gra_audit"
gra-batch = "genai_repo_auditor.cli:gra_batch"
gra-benchmark = "genai_repo_auditor.cli:gra_benchmark"
gra-chains = "genai_repo_auditor.cli:gra_chains"
gra-dashboard = "genai_repo_auditor.cli:gra_dashboard"
gra-doctor = "genai_repo_auditor.cli:gra_doctor"
gra-efficacy-benchmark = "genai_repo_auditor.cli:gra_efficacy_benchmark"
gra-efficacy-holdout = "genai_repo_auditor.cli:gra_efficacy_holdout"
gra-evidence-graph = "genai_repo_auditor.cli:gra_evidence_graph"
gra-gapfill = "genai_repo_auditor.cli:gra_gapfill"
gra-import-findings = "genai_repo_auditor.cli:gra_import_findings"
gra-index = "genai_repo_auditor.cli:gra_index"
gra-ingest = "genai_repo_auditor.cli:gra_ingest"
gra-issues = "genai_repo_auditor.cli:gra_issues"
gra-metrics = "genai_repo_auditor.cli:gra_metrics"
gra-no-findings = "genai_repo_auditor.cli:gra_no_findings"
gra-novelty = "genai_repo_auditor.cli:gra_novelty"
gra-proofs = "genai_repo_auditor.cli:gra_proofs"
gra-recon = "genai_repo_auditor.cli:gra_recon"
gra-remediate = "genai_repo_auditor.cli:gra_remediate"
gra-research = "genai_repo_auditor.cli:gra_research"
gra-run = "genai_repo_auditor.cli:gra_run"
gra-run-state = "genai_repo_auditor.cli:gra_run_state"
gra-sandbox-check = "genai_repo_auditor.cli:gra_sandbox_check"
gra-sarif = "genai_repo_auditor.cli:gra_sarif"
gra-scan = "genai_repo_auditor.cli:gra_scan"
gra-scanner-triage = "genai_repo_auditor.cli:gra_scanner_triage"
gra-store = "genai_repo_auditor.cli:gra_store"
gra-targets = "genai_repo_auditor.cli:gra_targets"
gra-taxonomy-preflight = "genai_repo_auditor.cli:gra_taxonomy_preflight"
gra-trace = "genai_repo_auditor.cli:gra_trace"
gra-validate-report = "genai_repo_auditor.cli:gra_validate_report"
gra-variant = "genai_repo_auditor.cli:gra_variant"
gra-workflow-profile = "genai_repo_auditor.cli:gra_workflow_profile"
gra-worktree-check = "genai_repo_auditor.cli:gra_worktree_check"


[tool.setuptools]
package-dir = { "" = "src" }
packages = ["genai_repo_auditor"]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.data-files]
"share/genai-repo-auditor" = ["VERSION"]
"share/genai-repo-auditor/bin" = ["bin/gra-*"]
"share/genai-repo-auditor/lib" = ["lib/*.py"]
"share/genai-repo-auditor/lib/publication" = ["lib/publication/*.py"]
"share/genai-repo-auditor/lib/validators" = ["lib/validators/*.py"]
"share/genai-repo-auditor/prompts" = ["prompts/*.md"]
"share/genai-repo-auditor/prompts/codex" = ["prompts/codex/*.md"]
"share/genai-repo-auditor/prompts/exec" = ["prompts/exec/*.md"]
"share/genai-repo-auditor/prompts/goal" = ["prompts/goal/*.md"]
"share/genai-repo-auditor/prompts/issue" = ["prompts/issue/*.md"]
"share/genai-repo-auditor/templates" = ["templates/taxonomy-aliases.json"]
"share/genai-repo-auditor/templates/agent-workers" = ["templates/agent-workers/*"]
"share/genai-repo-auditor/templates/dogfood" = ["templates/dogfood/*"]
"share/genai-repo-auditor/templates/reports" = ["templates/reports/*"]
"share/genai-repo-auditor/templates/taxonomies" = ["templates/taxonomies/*.json"]
"share/genai-repo-auditor/templates/workflows" = ["templates/workflows/*.json"]
"share/genai-repo-auditor/benchmarks/corpus" = ["benchmarks/corpus/*.json"]
"share/genai-repo-auditor/benchmarks/corpus/cases/ai-agent-mcp/indirect-output-001" = ["benchmarks/corpus/cases/ai-agent-mcp/indirect-output-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/ai-agent-mcp/indirect-output-control-001" = ["benchmarks/corpus/cases/ai-agent-mcp/indirect-output-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/ai-agent-mcp/tool-boundary-001" = ["benchmarks/corpus/cases/ai-agent-mcp/tool-boundary-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/ai-agent-mcp/tool-control-001" = ["benchmarks/corpus/cases/ai-agent-mcp/tool-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/dependency-supply-chain/dependency-control-001" = ["benchmarks/corpus/cases/dependency-supply-chain/dependency-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/dependency-supply-chain/dependency-path-001" = ["benchmarks/corpus/cases/dependency-supply-chain/dependency-path-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/execution-boundaries/query-001" = ["benchmarks/corpus/cases/execution-boundaries/query-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/execution-boundaries/query-control-001" = ["benchmarks/corpus/cases/execution-boundaries/query-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/github-actions/cache-control-001" = ["benchmarks/corpus/cases/github-actions/cache-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/github-actions/cache-target-001" = ["benchmarks/corpus/cases/github-actions/cache-target-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/github-actions/pr-control-001" = ["benchmarks/corpus/cases/github-actions/pr-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/github-actions/pr-target-001" = ["benchmarks/corpus/cases/github-actions/pr-target-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/python-web/authz-001" = ["benchmarks/corpus/cases/python-web/authz-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/python-web/authz-control-001" = ["benchmarks/corpus/cases/python-web/authz-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/python-web/path-001" = ["benchmarks/corpus/cases/python-web/path-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/python-web/path-control-001" = ["benchmarks/corpus/cases/python-web/path-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/secrets-logging/request-log-001" = ["benchmarks/corpus/cases/secrets-logging/request-log-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/secrets-logging/request-log-control-001" = ["benchmarks/corpus/cases/secrets-logging/request-log-control-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/webhook-trust/signature-001" = ["benchmarks/corpus/cases/webhook-trust/signature-001/*"]
"share/genai-repo-auditor/benchmarks/corpus/cases/webhook-trust/signature-control-001" = ["benchmarks/corpus/cases/webhook-trust/signature-control-001/*"]
